# new_1

./: .env.example  README.md  ipynb.ipynb  pyproject.toml  servers.json  test_change.py  test_service.py  test_ticket.py
data/: changes.json  sample_queries.json  service_health.json  tickets.db
scripts/: create_ticket_db.py
servers/: change_management_server.py  service_health_server.py  support_ticket_server.py
src/: config.py  host.py  prompts.py  tool_discovery.py
src/models/: change.py  service.py  ticket.py
src/services/: change_service.py  service_health_service.py  ticket_service.py
src/utils/: json_loader.py  logger.py  sqlite_loader.py  validators.py
